<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="place_holder">this is where we are going to add the actual text to be showen</string>
    <string name="question_txt_style">hi</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect answer :(</string>
    <string name="Highest_score">Highest score: </string>
    <string name="prev_text">Prev</string>
    <string name="score_text">"Your score: "</string>
</resources>